--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@ jobs:
     docker:
       # specify the version
       - image: circleci/golang:1.13
+        environment:
+          - GO111MODULE=on
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
